# bitcoin-ai-trader

./: docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  package.json  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  ws_connection_manager.py
backend/src/: main.ts
backend/src/app/: app.module.ts
backend/src/news/: news.controller.ts  news.service.ts
backend/src/news/dto/: latest-news.dto.ts
backend/src/news/entities/: news.entity.ts
backend/src/setting/: index.ts
crawling/: .dockerignore  Dockerfile  README.md  pyproject.toml
crawling/app/: first_collector.py  log_generator.py  main.py  monitoring_collector.py  news_collector.py  news_parser.py
frontend/: Dockerfile  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/hook/: useWebsocket.ts
trade_signal_monitoring/: Dockerfile  README.md  pyproject.toml  test.py
trade_signal_monitoring/app/: main.py  utils.py
trade_signal_monitoring/app/api/: api.py
trade_signal_monitoring/app/history_data_setting/: calc_ma.py  load_candle_data.py
trade_signal_monitoring/app/history_data_setting/calculation/: macd.py  moving_average.py  rsi.py
trade_signal_monitoring/app/init_setting_data/: init_data.py
trade_signal_monitoring/app/init_setting_data/calculation/: moving_average.py
trade_signal_monitoring/app/monitoring/: candle_monitoring.py  ma_monitoring.py  monitoring.py  price_monitoring.py  root_monitoring.py
trade_signal_monitoring/app/monitoring/calculation/: atr.py  macd.py  moving_average.py  rsi.py  volume.py
trade_signal_monitoring/app/monitoring/step/: first.py  second.py  third.py
trade_signal_monitoring/app/realtime_trade/: monitoring.py
vector_rag/: Dockerfile  README.md  pyproject.toml
vector_rag/app/: main.py  server.py  vector_store_manager.py
