[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "JaeIL00",email = "ekvm555@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
