[project]
name = "trade-signal-monitoring"
version = "0.1.0"
description = ""
authors = [
    {name = "JaeIL00",email = "ekvm555@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
