[project]
name = "trade-signal-monitoring"
version = "0.1.0"
description = ""
authors = [
    {name = "JaeIL00",email = "ekvm555@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
